--- a/htmlprac.html
+++ b/htmlprac.html
@@ -41,6 +41,12 @@
         <div id="div5">
             
         </div>
+        <div id="div6">
+            <button id="input2" onclick="javascript:repetir()">
+                <img id="img1" src="IMATJES/icons8-actualizaciones-disponibles-80.png">
+              </button>
+              
+        </div>
     </div>
 </body>
 </html>
